src/fileseq/parser/fileseqParser.py
# Generated from fileseq.g4 by ANTLR 4.13.1
# encoding: utf-8
from fileseq._vendor.antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class fileseqParser ( Parser ):

    grammarFileName = "fileseq.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'<UDIM>'", "'%(UDIM)d'", "<INVALID>", 
                     "<INVALID>", "'#'", "'@'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'-'" ]

    symbolicNames = [ "<INVALID>", "UDIM_ANGLE", "UDIM_PAREN", "PRINTF_PAD", 
                      "HOUDINI_PAD", "HASH", "AT", "EXTENSION", "DOT_FRAME_RANGE", 
                      "FRAME_RANGE", "DOT_NUM", "SLASH", "SPECIAL_CHAR", 
                      "NUM", "WORD", "DASH", "WS", "OTHER_CHAR" ]

    RULE_input = 0
    RULE_sequence = 1
    RULE_patternOnly = 2
    RULE_singleFrame = 3
    RULE_plainFile = 4
    RULE_directory = 5
    RULE_basenameChar = 6
    RULE_plainBasenameChar = 7
    RULE_dirSegment = 8
    RULE_basename = 9
    RULE_plainBasename = 10
    RULE_frameRange = 11
    RULE_frameNum = 12
    RULE_padding = 13
    RULE_extension = 14

    ruleNames =  [ "input", "sequence", "patternOnly", "singleFrame", "plainFile", 
                   "directory", "basenameChar", "plainBasenameChar", "dirSegment", 
                   "basename", "plainBasename", "frameRange", "frameNum", 
                   "padding", "extension" ]

    EOF = Token.EOF
    UDIM_ANGLE=1
    UDIM_PAREN=2
    PRINTF_PAD=3
    HOUDINI_PAD=4
    HASH=5
    AT=6
    EXTENSION=7
    DOT_FRAME_RANGE=8
    FRAME_RANGE=9
    DOT_NUM=10
    SLASH=11
    SPECIAL_CHAR=12
    NUM=13
    WORD=14
    DASH=15
    WS=16
    OTHER_CHAR=17

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class InputContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sequence(self):
            return self.getTypedRuleContext(fileseqParser.SequenceContext,0)


        def EOF(self):
            return self.getToken(fileseqParser.EOF, 0)

        def patternOnly(self):
            return self.getTypedRuleContext(fileseqParser.PatternOnlyContext,0)


        def singleFrame(self):
            return self.getTypedRuleContext(fileseqParser.SingleFrameContext,0)


        def plainFile(self):
            return self.getTypedRuleContext(fileseqParser.PlainFileContext,0)


        def getRuleIndex(self):
            return fileseqParser.RULE_input

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInput" ):
                listener.enterInput(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInput" ):
                listener.exitInput(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInput" ):
                return visitor.visitInput(self)
            else:
                return visitor.visitChildren(self)




    def input_(self):

        localctx = fileseqParser.InputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_input)
        try:
            self.state = 42
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 30
                self.sequence()
                self.state = 31
                self.match(fileseqParser.EOF)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 33
                self.patternOnly()
                self.state = 34
                self.match(fileseqParser.EOF)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 36
                self.singleFrame()
                self.state = 37
                self.match(fileseqParser.EOF)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 39
                self.plainFile()
                self.state = 40
                self.match(fileseqParser.EOF)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SequenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def directory(self):
            return self.getTypedRuleContext(fileseqParser.DirectoryContext,0)


        def frameRange(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fileseqParser.FrameRangeContext)
            else:
                return self.getTypedRuleContext(fileseqParser.FrameRangeContext,i)


        def padding(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fileseqParser.PaddingContext)
            else:
                return self.getTypedRuleContext(fileseqParser.PaddingContext,i)


        def basename(self):
            return self.getTypedRuleContext(fileseqParser.BasenameContext,0)


        def SPECIAL_CHAR(self):
            return self.getToken(fileseqParser.SPECIAL_CHAR, 0)

        def extension(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fileseqParser.ExtensionContext)
            else:
                return self.getTypedRuleContext(fileseqParser.ExtensionContext,i)


        def getRuleIndex(self):
            return fileseqParser.RULE_sequence

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSequence" ):
                listener.enterSequence(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSequence" ):
                listener.exitSequence(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSequence" ):
                return visitor.visitSequence(self)
            else:
                return visitor.visitChildren(self)




    def sequence(self):

        localctx = fileseqParser.SequenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_sequence)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.directory()
            self.state = 46
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 45
                self.basename()


            self.state = 48
            self.frameRange()
            self.state = 49
            self.padding()
            self.state = 55
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 50
                self.frameRange()
                self.state = 51
                self.padding()

            elif la_ == 2:
                self.state = 53
                self.match(fileseqParser.SPECIAL_CHAR)
                self.state = 54
                self.padding()


            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 17536) != 0):
                self.state = 57
                self.extension()
                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PatternOnlyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def directory(self):
            return self.getTypedRuleContext(fileseqParser.DirectoryContext,0)


        def padding(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fileseqParser.PaddingContext)
            else:
                return self.getTypedRuleContext(fileseqParser.PaddingContext,i)


        def basename(self):
            return self.getTypedRuleContext(fileseqParser.BasenameContext,0)


        def SPECIAL_CHAR(self):
            return self.getToken(fileseqParser.SPECIAL_CHAR, 0)

        def extension(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fileseqParser.ExtensionContext)
            else:
                return self.getTypedRuleContext(fileseqParser.ExtensionContext,i)


        def getRuleIndex(self):
            return fileseqParser.RULE_patternOnly

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPatternOnly" ):
                listener.enterPatternOnly(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPatternOnly" ):
                listener.exitPatternOnly(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPatternOnly" ):
                return visitor.visitPatternOnly(self)
            else:
                return visitor.visitChildren(self)




    def patternOnly(self):

        localctx = fileseqParser.PatternOnlyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_patternOnly)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.directory()
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 259968) != 0):
                self.state = 64
                self.basename()


            self.state = 67
            self.padding()
            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12:
                self.state = 68
                self.match(fileseqParser.SPECIAL_CHAR)
                self.state = 69
                self.padding()


            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 17536) != 0):
                self.state = 72
                self.extension()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SingleFrameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def directory(self):
            return self.getTypedRuleContext(fileseqParser.DirectoryContext,0)


        def frameNum(self):
            return self.getTypedRuleContext(fileseqParser.FrameNumContext,0)


        def basename(self):
            return self.getTypedRuleContext(fileseqParser.BasenameContext,0)


        def extension(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fileseqParser.ExtensionContext)
            else:
                return self.getTypedRuleContext(fileseqParser.ExtensionContext,i)


        def getRuleIndex(self):
            return fileseqParser.RULE_singleFrame

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSingleFrame" ):
                listener.enterSingleFrame(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSingleFrame" ):
                listener.exitSingleFrame(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingleFrame" ):
                return visitor.visitSingleFrame(self)
            else:
                return visitor.visitChildren(self)




    def singleFrame(self):

        localctx = fileseqParser.SingleFrameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_singleFrame)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.directory()
            self.state = 80
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 79
                self.basename()


            self.state = 82
            self.frameNum()
            self.state = 84 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 83
                self.extension()
                self.state = 86 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 17536) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PlainFileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def directory(self):
            return self.getTypedRuleContext(fileseqParser.DirectoryContext,0)


        def plainBasename(self):
            return self.getTypedRuleContext(fileseqParser.PlainBasenameContext,0)


        def extension(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fileseqParser.ExtensionContext)
            else:
                return self.getTypedRuleContext(fileseqParser.ExtensionContext,i)


        def getRuleIndex(self):
            return fileseqParser.RULE_plainFile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPlainFile" ):
                listener.enterPlainFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPlainFile" ):
                listener.exitPlainFile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPlainFile" ):
                return visitor.visitPlainFile(self)
            else:
                return visitor.visitChildren(self)




    def plainFile(self):

        localctx = fileseqParser.PlainFileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_plainFile)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.directory()
            self.state = 90
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 89
                self.plainBasename()


            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 17536) != 0):
                self.state = 92
                self.extension()
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DirectoryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SLASH(self, i:int=None):
            if i is None:
                return self.getTokens(fileseqParser.SLASH)
            else:
                return self.getToken(fileseqParser.SLASH, i)

        def dirSegment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fileseqParser.DirSegmentContext)
            else:
                return self.getTypedRuleContext(fileseqParser.DirSegmentContext,i)


        def getRuleIndex(self):
            return fileseqParser.RULE_directory

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDirectory" ):
                listener.enterDirectory(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDirectory" ):
                listener.exitDirectory(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDirectory" ):
                return visitor.visitDirectory(self)
            else:
                return visitor.visitChildren(self)




    def directory(self):

        localctx = fileseqParser.DirectoryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_directory)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11:
                self.state = 98
                self.match(fileseqParser.SLASH)
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==11:
                    self.state = 99
                    self.match(fileseqParser.SLASH)




            self.state = 109
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 104
                    self.dirSegment()
                    self.state = 105
                    self.match(fileseqParser.SLASH) 
                self.state = 111
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BasenameCharContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self):
            return self.getToken(fileseqParser.WORD, 0)

        def NUM(self):
            return self.getToken(fileseqParser.NUM, 0)

        def DOT_NUM(self):
            return self.getToken(fileseqParser.DOT_NUM, 0)

        def DASH(self):
            return self.getToken(fileseqParser.DASH, 0)

        def SPECIAL_CHAR(self):
            return self.getToken(fileseqParser.SPECIAL_CHAR, 0)

        def EXTENSION(self):
            return self.getToken(fileseqParser.EXTENSION, 0)

        def FRAME_RANGE(self):
            return self.getToken(fileseqParser.FRAME_RANGE, 0)

        def DOT_FRAME_RANGE(self):
            return self.getToken(fileseqParser.DOT_FRAME_RANGE, 0)

        def WS(self):
            return self.getToken(fileseqParser.WS, 0)

        def OTHER_CHAR(self):
            return self.getToken(fileseqParser.OTHER_CHAR, 0)

        def getRuleIndex(self):
            return fileseqParser.RULE_basenameChar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBasenameChar" ):
                listener.enterBasenameChar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBasenameChar" ):
                listener.exitBasenameChar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBasenameChar" ):
                return visitor.visitBasenameChar(self)
            else:
                return visitor.visitChildren(self)




    def basenameChar(self):

        localctx = fileseqParser.BasenameCharContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_basenameChar)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 259968) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PlainBasenameCharContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self):
            return self.getToken(fileseqParser.WORD, 0)

        def NUM(self):
            return self.getToken(fileseqParser.NUM, 0)

        def DASH(self):
            return self.getToken(fileseqParser.DASH, 0)

        def SPECIAL_CHAR(self):
            return self.getToken(fileseqParser.SPECIAL_CHAR, 0)

        def FRAME_RANGE(self):
            return self.getToken(fileseqParser.FRAME_RANGE, 0)

        def DOT_FRAME_RANGE(self):
            return self.getToken(fileseqParser.DOT_FRAME_RANGE, 0)

        def WS(self):
            return self.getToken(fileseqParser.WS, 0)

        def OTHER_CHAR(self):
            return self.getToken(fileseqParser.OTHER_CHAR, 0)

        def HASH(self):
            return self.getToken(fileseqParser.HASH, 0)

        def AT(self):
            return self.getToken(fileseqParser.AT, 0)

        def getRuleIndex(self):
            return fileseqParser.RULE_plainBasenameChar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPlainBasenameChar" ):
                listener.enterPlainBasenameChar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPlainBasenameChar" ):
                listener.exitPlainBasenameChar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPlainBasenameChar" ):
                return visitor.visitPlainBasenameChar(self)
            else:
                return visitor.visitChildren(self)




    def plainBasenameChar(self):

        localctx = fileseqParser.PlainBasenameCharContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_plainBasenameChar)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 258912) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DirSegmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def basenameChar(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fileseqParser.BasenameCharContext)
            else:
                return self.getTypedRuleContext(fileseqParser.BasenameCharContext,i)


        def getRuleIndex(self):
            return fileseqParser.RULE_dirSegment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDirSegment" ):
                listener.enterDirSegment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDirSegment" ):
                listener.exitDirSegment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDirSegment" ):
                return visitor.visitDirSegment(self)
            else:
                return visitor.visitChildren(self)




    def dirSegment(self):

        localctx = fileseqParser.DirSegmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_dirSegment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 116
                self.basenameChar()
                self.state = 119 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 259968) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BasenameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def basenameChar(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fileseqParser.BasenameCharContext)
            else:
                return self.getTypedRuleContext(fileseqParser.BasenameCharContext,i)


        def getRuleIndex(self):
            return fileseqParser.RULE_basename

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBasename" ):
                listener.enterBasename(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBasename" ):
                listener.exitBasename(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBasename" ):
                return visitor.visitBasename(self)
            else:
                return visitor.visitChildren(self)




    def basename(self):

        localctx = fileseqParser.BasenameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_basename)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 121
                    self.basenameChar()

                else:
                    raise NoViableAltException(self)
                self.state = 124 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,15,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PlainBasenameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def plainBasenameChar(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fileseqParser.PlainBasenameCharContext)
            else:
                return self.getTypedRuleContext(fileseqParser.PlainBasenameCharContext,i)


        def getRuleIndex(self):
            return fileseqParser.RULE_plainBasename

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPlainBasename" ):
                listener.enterPlainBasename(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPlainBasename" ):
                listener.exitPlainBasename(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPlainBasename" ):
                return visitor.visitPlainBasename(self)
            else:
                return visitor.visitChildren(self)




    def plainBasename(self):

        localctx = fileseqParser.PlainBasenameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_plainBasename)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 126
                    self.plainBasenameChar()

                else:
                    raise NoViableAltException(self)
                self.state = 129 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,16,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FrameRangeContext(ParserRuleContext):
        __slots__ = 'parser'
